--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -62,7 +62,9 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>1.7.2</version>
+<!--             <version>1.7.2</version> -->
+            <version>2.3.2</version>
+
         </dependency>
         <dependency>
             <groupId>com.googlecode.juniversalchardet</groupId>
