--- a/intavcore/pom.xml
+++ b/intavcore/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.8.3</version>
+			<version>1.9.4</version>
 		</dependency>
 
 		<dependency>
@@ -65,7 +65,8 @@
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
-			<version>1.6</version>
+<!-- 			<version>1.6</version> -->
+<version>1.22</version>
 		</dependency>
 
 		<dependency>
@@ -121,7 +122,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.31</version>
+<!-- 			<version>5.1.31</version> -->
+<version>8.0.16</version>
 		</dependency>
 
 		<dependency>
