--- a/intavcore/pom.xml
+++ b/intavcore/pom.xml
@@ -160,13 +160,13 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.8.11</version>
+			<version>[2.9.10.7,)</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.11</version>
+			<version>[2.9.10.7,)</version>
 		</dependency>
 
 		<!-- Gson: Java to Json conversion -->
