--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -256,21 +256,17 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<!-- <version>2.8.11</version> -->
-			<version>2.9.10</version>
+			<version>[2.9.10.7,)</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.8.11</version>
+			<!-- <version>2.8.11</version> -->
+			<version>[2.9.10.7,)</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.8.11</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
